--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -1,4 +1,6 @@
 @import "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css";
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+
 :root {
 	--primary: #3b82f6;
 	--secondary: rgb(209, 255, 255);
@@ -16,4 +18,5 @@ $background-color_1: var(--dark-bg);
 	width: 100%;
 	background-color: $background-color_1;
 	overflow-x: hidden;
+	margin: 0 auto;
 }
